--- a/index.html
+++ b/index.html
@@ -33,16 +33,17 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.2);
+            background: rgba(0, 0, 0, 0.1);
             z-index: 1;
         }
         header h1 {
             font-size: 3.5rem;
             color: white;
-            z-index: 2;
+            
+           
         }
         header p {
-            z-index: 2;
+            ;
             font-size: 1.2rem;
         }
         .menu {
@@ -88,6 +89,11 @@
         .map-container {
             text-align: center;
             margin: 40px 0;
+        }
+        .contact-info {
+            text-align: center;
+            margin: 40px 0;
+            font-size: 1.2rem;
         }
         iframe {
             width: 100%;
@@ -140,6 +146,10 @@
         loading="lazy">
     </iframe>
 </div>
+<div class="contact-info">
+        <h2>Contact Us</h2>
+        <p>Phone: <strong>8344242184</strong></p>
+    </div>
 
     <!-- Footer Section -->
     <footer>
@@ -147,4 +157,4 @@
     </footer>
 
 </body>
-</html>
+</html></html>
