--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             line-height: 1.6;
         }
         header {
-            background: url('background.jpeg') no-repeat center center/cover;
+            background: url('Background.jpeg') no-repeat center center/cover;
             height: 100vh;
             display: flex;
             justify-content: center;
